fixed the image so that it aligns as it should

--- a/css/index.css
+++ b/css/index.css
@@ -160,5 +160,7 @@ html {
 .container {
   width: 1024px;
   max-width: 100%;
+  padding-left: 0;
+  padding-right: 0;
 }
 /* Your Code Goes Here */
