--- a/less/main-content.less
+++ b/less/main-content.less
@@ -1,4 +1,6 @@
 .container{
     width: 1024px;
     max-width: 100%;
+    padding-left: 0; 
+    padding-right: 0; 
 }
